documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.CS

        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleWalk@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleWalk();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DataClear@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_DataClear(UInt16 maskval, UInt16 addrval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DataGet@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_DataGet(UInt16 maskval, UInt16 addrval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DataRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_DataRead(UInt16 addrval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DataSet@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_DataSet(UInt16 maskval, UInt16 addrval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DataWrite@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_DataWrite(UInt16 value, UInt16 addrval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_Div@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_Div(UInt32 diva, UInt32 divb);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DPMIAllocSel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_DPMIAllocSel(UInt16 segval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DPMIDosAlloc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_DPMIDosAlloc(UInt16 paras);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DPMIDosFree@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_DPMIDosFree(UInt16 selector);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DPMIFreeSel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_DPMIFreeSel(UInt16 selector);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DPMIIntSim@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_DPMIIntSim(UInt16 intnum, IntPtr dpmireg);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DPMIPresent@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_DPMIPresent();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DspIntmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_DspIntmClear(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DspIntmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_DspIntmSet(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DspXfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_DspXfClear(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_DspXfSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_DspXfSet(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ErrDesc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C41_ErrDesc(Int32 errval);
        public static string C41_ErrDesc(Int32 errval) { return Marshal.PtrToStringAnsi(_C41_ErrDesc(errval)); }
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ErrDescStr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C41_ErrDescStr(Int32 errval);
        public static string C41_ErrDescStr(Int32 errval) { return Marshal.PtrToStringAnsi(_C41_ErrDescStr(errval)); }
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ErrName@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C41_ErrName(Int32 errval);
        public static string C41_ErrName(Int32 errval) { return Marshal.PtrToStringAnsi(_C41_ErrName(errval)); }
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ExpandMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_ExpandMant(ref Int32 mant, ref Int32 exp);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ExtDinWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ExtDinWr(Int32 dinvalue, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_FileClose(Int32 handle);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileErr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FileErr();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileErrClr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_FileErrClr();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileErrSet@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_FileErrSet();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileOpenRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FileOpenRead(ref string filename);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileOpenWrite@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FileOpenWrite(ref string filename);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FileRead(Int32 handle, IntPtr buffer, UInt16 count);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileSeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FileSeek(Int32 handle, UInt32 offset);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileTell@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_FileTell(Int32 handle);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FileWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FileWrite(Int32 handle, IntPtr buffer, UInt16 count);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FilterAddr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_FilterAddr(Int32 labelval, Int32 sdival, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FilterClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FilterClear(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FilterFill@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FilterFill(ref UInt16 msgaddr, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FilterRd@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FilterRd(ref UInt16 msgaddr, Int32 labelval, Int32 sdival, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FilterWipe@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FilterWipe(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FilterWr@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FilterWr(ref UInt16 msgaddr, Int32 labelval, Int32 sdival, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldGetParBit@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_FldGetParBit(UInt32 msgval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_GetHigh@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_GetHigh(UInt32 val);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_GetLow@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_GetLow(UInt32 val);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_GlobalRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_GlobalRd(UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_GlobalWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_GlobalWr(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HandleAssign@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HandleAssign(UInt16 sizval, UInt16 memval, UInt16 ioval, UInt16 irqval, Int32 cardnum);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HandleClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HandleClose(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HandleDel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HandleDel(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HandleGet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HandleGet(ref UInt16 sizval, ref UInt16 memval, ref UInt16 ioval, ref UInt16 irqval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HandleIns@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_HandleIns(ref string cardname, Int32 rcvcount, Int32 xmtcount, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HandleOkay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_HandleOkay(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HandleOpen@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HandleOpen(ref string cardname, Int32 rcvcount, Int32 xmtcount, Int32 cardnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HandleVer@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_HandleVer(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_HeapAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_HeapAlloc(UInt16 wordcount, UInt32 handleval);
